<!-- document-management/pom.xml -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openfilz</groupId>
    <artifactId>document-management</artifactId>
    <version>1.0.37-SNAPSHOT</version>
    <packaging>pom</packaging>
    <url>https://github.com/openfilz/document-management</url>

    <name>Document Management System</name>

    <description>OpenFilz - Document Management API</description>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/openfilz/document-management/blob/c8603eab9ba52ab8dfd87e6fc51ef144f8915e98/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- Contact for developers on project -->
    <developers>
        <developer>
            <name>Yann Demel</name>
            <email>demelyann@gmail.com</email>
            <!-- Your organization, or Github is fine too -->
            <organization>OpenFilz</organization>
            <organizationUrl>https://openfilz.org</organizationUrl>
        </developer>
    </developers>

    <!-- Source Control Information, Github Stuff -->
    <scm>
        <!-- Should be format scm:git:git or scm:git:https -->
        <connection>scm:git:https://github.com/openfilz/document-management.git</connection>
        <developerConnection>scm:git:https://github.com/openfilz/document-management.git</developerConnection>
        <url>https://github.com/openfilz/document-management</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>24</java.version>
        <spring-boot.version>3.5.3</spring-boot.version> <!-- Or latest stable -->
        <spring-cloud.version>2025.0.0</spring-cloud.version> <!-- Or latest stable -->
        <org.projectlombok.version>1.18.38</org.projectlombok.version>
        <org.mapstruct.version>1.6.3</org.mapstruct.version>
        <springdoc-openapi.version>2.8.9</springdoc-openapi.version>
        <r2dbc-postgresql.version>1.0.7.RELEASE</r2dbc-postgresql.version>
        <minio.version>8.5.17</minio.version>
        <keycloak.version>26.2.4</keycloak.version> <!-- Check for latest compatible -->
        <jjwt.version>0.12.6</jjwt.version> <!-- For manual JWT parsing if needed -->
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <registry.hostname>localhost</registry.hostname>
        <registry.port>5000</registry.port>
        <registry.scheme>https</registry.scheme>
        <docker.context.path>snapshots/</docker.context.path>
        <project.scm.id>github-actions@github.com</project.scm.id>
    </properties>

    <modules>
        <module>document-management-api</module>
        <module>document-management-gateway</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.projectlombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>r2dbc-postgresql</artifactId>
                <version>${r2dbc-postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
             <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-spring-boot-starter</artifactId>
                <version>${keycloak.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${org.projectlombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${org.mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>publishMaven</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <checksums>required</checksums>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>changeLog</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>se.bjurr.gitchangelog</groupId>
                        <artifactId>git-changelog-maven-plugin</artifactId>
                        <version>2.2.5</version>
                        <executions>
                            <execution>
                                <id>GenerateGitChangelog</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>git-changelog</goal>
                                </goals>
                                <configuration>
                                    <templateFile>changelog.mustache</templateFile>
                                    <readableTagName>-([^-]+?)$</readableTagName>
                                    <file>CHANGELOG.md</file>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>